test/TestPhases/namecheck/valid/implicitmember2.blc
import E "../imports/enum"
module

function f ()
    var color: E.Color = E.Green // implicit member access in other module
end