test/TestPhases/namecheck/invalid/implicitmember3.blc
import E "../imports/enum"
module

function f ()
    var color : E.Color = Green // no implicit member access in other module without qualification
end